add element div class carousel-scroll-contenair in index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,30 @@
         <!------- START BANNER CAROUSEL ------->
         <div class="carousel-contenair">
           <div class="carousel-scroll">
-            <img src="garage-service-01.png" alt="V.Parrot - Vente de voiture d'occasion" />
+            <div class="carousel-card-content">
+              <div class="carousel-card">
+                <div class="carousel-card-image">
+                  <img src="garage-service-01.png" alt="V.Parrot - Garagiste depuis 15 ans" />
+                </div>
+                <div class="carousel-card-text carousel-card-text-right">
+                  <h1>Vincent PARROT</h1>
+                  <p>GARAGISTE<br>15 ans d'exp<br>Réparation<br>Garanties<br>Conformité constructeur</p>
+                </div>
+              </div>
+              <div class="carousel-card">
+                <div class="carousel-card-image">
+                  <img src="usedcar01.png" alt="V.Parrot - Vente de voiture d'occasion" />
+                </div>
+                <div class="carousel-card-text carousel-card-text-left">
+                  <h1>Vincent PARROT</h1>
+                  <p>VENDEUR<br>Véhicules d'occasion<br>Garanties<br>Conformité constructeur</p>
+                </div>
+                
+
+              </div>
+
+            </div>
+            <!--<img src="garage-service-01.png" alt="V.Parrot - Vente de voiture d'occasion" />-->
           </div>
         </div>
         <!------- END BANNER CAROUSEL ------->
@@ -545,7 +568,7 @@
               </ul>
             </div>
             <div id="footer-bottom">
-              <h6>Copyrith  All right reserve Desgin by : @MaxwellFR92</h6>
+              <h6>Copyrith  All right reserve Design by : @MaxwellFR92</h6>
             </div>
           </div>
         </div>
